# django-album

./: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  readme.md
app/: db.sqlite3
app/album/: forms.py  models.py  urls.py  views.py
app/album/migrations/: 0001_initial.py
app/album/templates/: album_detail.html  album_list.html  base.html  create_album.html  create_photo.html  index.html
app/config/: asgi.py  settings.py  urls.py  wsgi.py
app/theme/static_src/: package-lock.json  tailwind.config.js
